fixed aggregate response type and updated swagger + tests to reflect
